--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 }
 
 :root{
-    --bg-color: #FED4B6;
+    --bg-color: white;
 }
 
 body{
@@ -17,22 +17,76 @@ header{
 }
 
 header > h1{
-    margin: 25px;
-    letter-spacing: 1px;
+    margin-top: 40px;
+    color:  #08346e;
 
 }
-
-nav{
-    text-align: center;
-}
-
-
 
 #calculator{
     margin: auto;
+    margin-top: 50px;
     padding: 15px;
+}
+
+p{
+    color: rgb(75, 74, 74);
+}
+
+#calcular{
+    display: block;
+    padding: 9px;
+    margin-top: 10px;
+    margin-bottom: 100px;
+    width: 120px;
+    background-color: rgb(223, 147, 7);
+    font-size: 15px;
+    color: white;
+    font-weight: bolder;
+    border: none;
+    border-radius: 15px;
+    box-shadow: 3.5px 3.5px 5px rgba(0, 0, 0, 0.281);
+}
+
+#calcular:hover{
+    transform: scale(1.03);
+    cursor: pointer;
+}
+
+input{
+    width: 230px;
+    padding: 8px;
+    border: solid 2px #1f5eaf;
+    background-color: white;
+    border-radius: 10px;
+    margin-top: 5px;
+    margin-bottom: 30px;
+}
+
+select{
+    margin-bottom: 30px;
+    width: 255px;
+    padding: 7px;
+    border: solid 2px #1f5eaf;
+    background-color: white;
+    border-radius: 10px;
+    margin-top: 5px;
+    color: rgb(75, 74, 74);
+}
+
+#valor-calculado{
+    margin: auto;
 }
 
 footer{
     text-align: center;
+    color: rgb(75, 74, 74);
+    opacity: 0.7;
+}
+
+footer  span{
+    font-weight: bold;
+}
+
+footer  a{
+    color: rgb(75, 74, 74);
 }
