--- a/css/style.css
+++ b/css/style.css
@@ -32,11 +32,11 @@ p{
     color: rgb(75, 74, 74);
 }
 
-#calcular{
+button#calcular{
     display: block;
     padding: 9px;
-    margin-top: 10px;
-    margin-bottom: 100px;
+    margin-top: 30px;
+    margin-bottom: 80px;
     width: 120px;
     background-color: rgb(223, 147, 7);
     font-size: 15px;
@@ -53,34 +53,44 @@ p{
 }
 
 input{
-    width: 230px;
+    width: 300px;
     padding: 8px;
     border: solid 2px #1f5eaf;
     background-color: white;
     border-radius: 10px;
-    margin-top: 5px;
+    margin-top: 7px;
     margin-bottom: 30px;
 }
 
 select{
     margin-bottom: 30px;
-    width: 255px;
+    width: 320px;
     padding: 7px;
     border: solid 2px #1f5eaf;
     background-color: white;
     border-radius: 10px;
-    margin-top: 5px;
+    margin-top: 7px;
     color: rgb(75, 74, 74);
 }
 
 #valor-calculado{
     margin: auto;
+    text-align: center;
+    color:  #08346e;
+}
+
+#valor-por-cabeca{
+    font-weight: bold;
 }
 
 footer{
     text-align: center;
     color: rgb(75, 74, 74);
-    opacity: 0.7;
+    opacity: 0.6;
+}
+
+footer p{
+    font-size: 0.8em;
 }
 
 footer  span{
